--- a/DUA_WPF/DUA_WPF.csproj
+++ b/DUA_WPF/DUA_WPF.csproj
@@ -106,11 +106,35 @@
     <Compile Include="DUA_Main.xaml.cs">
       <DependentUpon>DUA_Main.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\GroupModel.cs" />
+    <Compile Include="Models\TemplateModels\AlignmentTemplateModel.cs" />
+    <Compile Include="Models\TemplateModels\CorridorStyleTemplateModel.cs" />
+    <Compile Include="Models\TemplateModels\ProfileViewTemplateModel.cs" />
+    <Compile Include="Models\TemplateModels\ProfileTemplateModel.cs" />
+    <Compile Include="Models\TemplateModels\TemplateModel.cs" />
+    <Compile Include="Navigator\CurrentState.cs" />
+    <Compile Include="Navigator\INavigator.cs" />
+    <Compile Include="Navigator\Navigator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\DrawerListViewModel.cs" />
+    <Compile Include="ViewModels\GroupsViewModel.cs" />
+    <Compile Include="ViewModels\Group\GroupViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="ViewModels\TemplatesViewModel.cs" />
+    <Compile Include="ViewModels\Template\AlignmentTemplateViewModel.cs" />
+    <Compile Include="ViewModels\Template\CorridorStyleTemplateViewModel.cs" />
+    <Compile Include="ViewModels\Template\ProfileTemplateViewModel.cs" />
+    <Compile Include="ViewModels\Template\ProfileViewStyleViewModel.cs" />
+    <Compile Include="ViewModels\Template\TemplateViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
-    <Compile Include="Views\MainView.xaml.cs">
-      <DependentUpon>MainView.xaml</DependentUpon>
+    <Compile Include="Views\DrawerList.xaml.cs">
+      <DependentUpon>DrawerList.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\GroupsView.xaml.cs">
+      <DependentUpon>GroupsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\TemplatesView.xaml.cs">
+      <DependentUpon>TemplatesView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -122,7 +146,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\MainView.xaml">
+    <Page Include="Views\DrawerList.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\GroupsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\TemplatesView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -131,9 +163,7 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\CommunityToolkit.Mvvm.8.2.2\build\netstandard2.0\CommunityToolkit.Mvvm.targets" Condition="Exists('..\packages\CommunityToolkit.Mvvm.8.2.2\build\netstandard2.0\CommunityToolkit.Mvvm.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
